Corrigindo algumas funcionalidades e documentaçao
